# Agricultural_Crop_Health_and_Harvest_Prediction_System

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  lint.yml  python-tests.yml
assets/architecture/: README.md
assets/diagrams/: README.md
assets/screenshots/: README.md
configs/: README.md  config.yaml  crops.yaml  logging.yaml  model.yaml  preprocessing.yaml  sensors.yaml
data/metadata/: README.md
datasets/benchmarks/: README.md
datasets/crop_profiles/: README.md
datasets/labels/: README.md
datasets/public/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/datasets/: README.md
docs/deployment/: README.md
docs/experiments/: README.md
docs/sensors/: README.md
models/anomaly/: README.md
models/crop_health/: README.md
models/environment/: README.md
models/yield/: README.md
notebooks/: 01_data_understanding.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_model_experiments.ipynb  05_explainability.ipynb  README.md
reports/eda/: README.md
reports/evaluation/: README.md
reports/experiments/: README.md
scripts/: README.md  evaluate.py  export_models.py  generate_reports.py  inference.py  train.py
src/: __init__.py
src/analytics/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  response_models.py
src/common/: README.md  __init__.py  constants.py  exceptions.py  logger.py  schemas.py  utils.py  validators.py
src/decision_engine/: README.md  __init__.py  optimizer.py  (+2 more)
(+130 files in other folders)
